# django-ldapdb2

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyasn_rfc5805.py  pyproject.toml  tox.ini  txn_ctrls.py  txn_testing.py
.github/: FUNDING.yml
.github/workflows/: release.yml  test.yml
docs/: changelog.md  contributing.md  index.md  installation.md  migration.md  quickstart.md
docs/guides/: logging.md  models.md
example/: asgi.py  fields.py  iterables.py  manage.py  models.py  settings.py  urls.py  wsgi.py
example/management/commands/: create_ldif.py
example/tests/: annotations.py  base.py  constants.py  generator.py  test_annotations.py  test_cursor.py  test_delete_compiler.py  test_fields.py  test_model_save.py  test_model_update.py  test_paging_and_ordering.py  test_queryset_resolver.py  test_rdn_edge_cases.py  test_router.py  test_sentry_integration.py  test_sql_compiler.py  test_sql_insert_compiler.py  test_transactions.py
example/tests/fields/: multi_value_field.py  test_boolean_field.py  test_custom_lookup.py  test_datetime_fields.py  test_group_members.py  test_password_field.py
ldapdb/: exceptions.py  fields.py  iterables.py  models.py  router.py  typing_compat.py  utils.py  validators.py
ldapdb/backends/ldap/: __init__.py  base.py  client.py  compiler.py  controls.py  creation.py  cursor.py  cursor_alt.py  expressions.py  features.py  introspection.py  ldif_helpers.py  lib.py  lookups.py  operations.py  pyasn_rfc5805.py  transaction.py
ldapdb/management/commands/: inspectldap.py
ldapdb/models/: __init__.py  base.py  fields.py
tests/openldap-server/: Dockerfile  Dockerfile-symas  docker-compose.yaml  init-ldap-symas.sh  init-ldap.sh  slapd-symas.conf  slapd.conf
tests/openldap-server/ldifs/: base.ldif
tests/openldap-server/schema/: fields.schema
tests/samba-ad-server/: docker-compose.yaml
