[project]
name = "django-ldapdb2"
version = "0.1.0"
description = "LDAP database backend for Django - loosely based on django-ldapdb"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=4.2",           # https://docs.djangoproject.com/en/stable/releases/
    "python-ldap>=3.3",      # https://github.com/python-ldap/python-ldap/releases
]
