[project]
name = "django-ldapdb2"
version = "0.1.0"
description = "LDAP database backend for Django - loosely based on django-ldapdb"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django>=4.2",           # https://docs.djangoproject.com/en/stable/releases/
    "python-ldap>=3.3",      # https://github.com/python-ldap/python-ldap/releases
]

[tool.uv]
dev-dependencies = [
    "django-stubs",
    "ruff",
]

######################################################################################
# ruff
#
[tool.ruff]
src = ["ldapdb"]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.format]
# Like Black, use single quotes for strings.
quote-style = "single"

[tool.ruff.lint]
select = [
    "ARG",     # flake8-unused-arguments
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "DJ",      # flake-django
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "G",       # flake8-logging-format
    "FURB",    # refurb  - depends on enabled preview option
    "I",       # isort
    "INT",     # flake8-gettext
    "ISC",     # flake8-implicit-str-concat
    "PERF",    # perflint
    "PLE",     # pylint errors
    "PLR0",    # pylint refactor errors
    "RUF100",  # ruff / unused-noqa
    "SIM",     # flake8-simplify
    "TCH",     # flake8-type-checking
    "UP",      # pyupgrade
    "W",       # pycodestyle warnings
]
ignore = [
    "DJ008",   # django-model-without-dunder-str - Often, we don't care about these
    "PERF401", # manual-list-comprehension - Forcing us to use list comprehensions with dicts inside them is weird.
    "UP015",   # redundant-open-modes - We like to have the mode explicitly set in open() calls
]

[tool.ruff.lint.isort]
combine-as-imports = true
no-lines-before = ["local-folder"]
relative-imports-order = "closest-to-furthest"

[tool.ruff.lint.mccabe]
max-complexity = 13

[tool.ruff.lint.pylint]
max-args = 15  # default is 5
max-branches = 28  # default is 12
max-returns = 13  # default is 6
max-statements = 134  # default is 50
