[project]
name = "django-ldapdb2"
version = "0.2.2"
description = "LDAP database backend for Django"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",           # https://docs.djangoproject.com/en/stable/releases/
    "python-ldap>=3.3",      # https://github.com/python-ldap/python-ldap/releases
    "typing-extensions ; python_version < '3.12'",
    # "passlib" was the defacto standard library for handling encryption,
    # but it's not actively maintained anymore: https://foss.heptapod.net/python-libs/passlib/-/issues/187
    # "libpass" is a preliminary fork with some fixes applied.
    # See discussion here: https://github.com/notypecheck/passlib/issues/11
    # It's apparently now used in Gentoo and OpenBSD. Ansible uses the C implementation of crypt/libxcrypt via ctypes.
    # I think it's best to use the mentioned fork but pin the version so that we minimize a supply-chain attack.
    # When updating the package in the future, check the code and see if there are alternatives then.
    "libpass==1.9.3",
]

[optional-dependencies]
argon2 = ['argon2-cffi']

[dependency-groups]
dev = [
    "django-stubs",
    "faker>=30.8.1",
    "ruff",

    # used only for Sentry integration tests
    "sentry-sdk[django]",

    # used only for PasswordField tests
    "argon2-cffi",
]

######################################################################################
# ruff
#
[tool.ruff]
src = ["ldapdb"]
target-version = "py310"
line-length = 120
indent-width = 4

[tool.ruff.format]
# Like Black, use single quotes for strings.
quote-style = "single"

[tool.ruff.lint]
select = [
    "ARG",     # flake8-unused-arguments
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "DJ",      # flake-django
    "E",       # pycodestyle errors
    "F",       # pyflakes
    "G",       # flake8-logging-format
    "FURB",    # refurb  - depends on enabled preview option
    "I",       # isort
    "INT",     # flake8-gettext
    "ISC",     # flake8-implicit-str-concat
    "PERF",    # perflint
    "PLE",     # pylint errors
    "PLR0",    # pylint refactor errors
    "RUF100",  # ruff / unused-noqa
    "SIM",     # flake8-simplify
    "TCH",     # flake8-type-checking
    "UP",      # pyupgrade
    "W",       # pycodestyle warnings
]
ignore = [
    "DJ008",   # django-model-without-dunder-str - Often, we don't care about these
    "PERF401", # manual-list-comprehension - Forcing us to use list comprehensions with dicts inside them is weird.
    "UP015",   # redundant-open-modes - We like to have the mode explicitly set in open() calls
]
typing-modules = ["ldapdb.typing_compat"]  # can be removed once we're only supporting python >= 3.12

[tool.ruff.lint.isort]
combine-as-imports = true
no-lines-before = ["local-folder"]
relative-imports-order = "closest-to-furthest"

[tool.ruff.lint.pylint]
max-args = 15  # default is 5
max-branches = 28  # default is 12
max-returns = 13  # default is 6
max-statements = 134  # default is 50
